--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - pip install --upgrade pip
   - pip install --upgrade -r requirements.txt
   - cython src/*.pyx
-  - pip install -v -e .
+  - pip install -v --no-cache-dir -e .
 script:
   - pytest tests --cov dedupe
   - python tests/canonical.py -vv
